# LMF

./: .gitignore  CITATION.cff  ExportedPars.csv  LICENSE  ParVals.txt  README.md  local-QuantyLF.ipynb  local-QuantyLF.py  setup.cfg
src/QuantyLF/cases/: D4ha_3d.lua  D4ha_3d.tex  D4hb_3d  D4hb_3d.lua  OH_XMCD  Oh_XMCD.lua  Oh_XMCD.txt
src/QuantyLF/cases/utils/: slater_integrals.lua  slater_integrals.py
