[metadata]
name = QuantyLF
version = 0.0.164
author = Peter ufondu
description = QuantyLF is a libary to help manage Liegand Field simulations in Quanty.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    scipy
    lmfit
[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    methylcheck
